tutorials/implementing-different-types-of-loadbalancers-in-GKE/ilb-ingress/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: ilb-ingress
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: web
  type: NodePort
