tutorials/implementing-different-types-of-loadbalancers-in-GKE/ilb-ingress/ilb-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ilb-ingress
  namespace: ilb-ingress
  annotations:
    kubernetes.io/ingress.class: "gce-internal"
spec:
  backend:
    serviceName: web
    servicePort: 8080
